--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,10 @@
  
  * New target-runner.bat for Windows contributed by André de Souza Andrade.
   
+ * Fixed all shell scripts calling functions before defining them, which is not
+   portable.
+                                                          (Manuel López-Ibáñez)
+ 
  * At the end of each race, the best overall may be different than the best of
    the race if the race stops before evaluating all instances seen in previous
    races. We now print the best overall (best-so-far). Elites evaluated on more
