--- a/vignettes/irace-package.bib
+++ b/vignettes/irace-package.bib
@@ -14,7 +14,7 @@
 
 @string{springer-berlin-ad = {Berlin, Germany}}
 
-@string{springer-cham-ad = {Cham}}
+@string{springer-cham-ad = {Cham, Switzerland}}
 
 @string{springer-lncs = {Springer, Heidelberg, Germany}}
 
