--- a/NEWS
+++ b/NEWS
@@ -41,7 +41,11 @@
  * Fixed all shell scripts calling functions before defining them, which is not
    portable.
                                                          (Manuel López-Ibáñez)
- 
+
+ * Fixed '--parallel' bug in Windows that resulted in
+   "Error in checkForRemoteErrors(val)"
+                                                          (Manuel López-Ibáñez)
+                                                          
 2.4
 
  * The output of irace now specifies in which order, if any, configurations are
