--- a/vignettes/irace-package.Rnw
+++ b/vignettes/irace-package.Rnw
@@ -103,6 +103,7 @@
 \let\proglang=\textsf
 \newcommand{\pkg}[1]{{\fontseries{b}\selectfont #1}}
 \newcommand{\aR}{\proglang{R}\xspace}
+\newcommand{\MATLAB}{\proglang{MATLAB}\xspace}
 \newcommand{\eg}{e.g.,\xspace}
 \newcommand{\SoftwarePackage}{\pkg}
 \newcommand{\ACOTSP}{\SoftwarePackage{ACOTSP}\xspace}
@@ -2664,23 +2665,25 @@ irace. This is done, for example, when maximizing the hypervolume (see the last
 lines in \IRACEHOME{/examples/hypervolume/target-evaluator}).
 
 
-\subsection{Is it possible to configure a MATLAB algorithm with \irace?}
+\subsection[Is it possible to configure a MATLAB algorithm with irace?]%
+{Is it possible to configure a \MATLAB algorithm with \irace ?}
 
-Definitely. There are two main ways to achieve this:
+Definitely. There are three main ways to achieve this:
 \begin{enumerate}
-\item{ Edit the \parameter{targetRunner} script to call MATLAB in a non-interactive
-    way. See the MATLAB documentation, or the following links.\footnote{\url{http://stackoverflow.com/questions/1518072/suppress-start-message-of-matlab}\\ \url{http://stackoverflow.com/questions/4611195/how-to-call-matlab-from-command-line-and-print-to-stdout-before-exiting}} %
-    You would need to pass the parameter received by \parameter{targetRunner} to your MATLAB script: \url{http://www.mathworks.nl/support/solutions/en/data/1-1BS5S/?solution=1-1BS5S}. There is a minimal example in:
-    \begin{center}
-      \IRACEHOME{/examples/matlab/}.
-    \end{center}
-  }
-\item{ Call MATLAB code directly from \aR using the
-    \pkg{R.matlab} package (\url{https://cran.r-project.org/package=R.matlab}). This
+\item Edit the \parameter{targetRunner} script to call \MATLAB in a non-interactive
+    way. See the \MATLAB documentation, or the following links.\footnote{\url{http://stackoverflow.com/questions/1518072/suppress-start-message-of-matlab}} \footnote{\url{http://stackoverflow.com/questions/4611195/how-to-call-matlab-from-command-line-and-print-to-stdout-before-exiting}} %
+    You would need to pass the parameter received by \parameter{targetRunner} to your \MATLAB script.\footnote{\url{https://www.mathworks.com/matlabcentral/answers/97204-how-can-i-pass-input-parameters-when-running-matlab-in-batch-mode-in-windows}} \footnote{\url{https://stackoverflow.com/questions/3335505/how-can-i-pass-command-line-arguments-to-a-standalone-matlab-executable-running}} 
+    %
+    There is a minimal example in \IRACEHOME{/examples/matlab/}.
+  
+\item Call \MATLAB code directly from \aR using the
+    \pkg{matlabr} package (\url{https://cran.r-project.org/package=matlabr}). This
     is a better option if you are experienced in \aR. Define \parameter{targetRunner} as
     an \aR function instead of a path to a script. The function should
-    call your MATLAB code with appropriate parameters.
-  }
+    call your \MATLAB code with appropriate parameters.
+  
+  \item Another possibility is calling \MATLAB directly from a different programming language and write \parameter{targetRunner} in that programming language,  for example, in \proglang{Python} (see examples in \IRACEHOME{/examples/target-runner-python/}).\footnote{\url{https://www.mathworks.com/help/matlab/matlab_external/call-matlab-functions-from-python.html}\\
+    \url{https://www.mathworks.com/help/matlab/matlab_external/call-user-script-and-function-from-python.html}}
 \end{enumerate}
 
 \subsection{My program works perfectly on its own, but not when running under \irace. Is irace broken?}\label{faq:valgrind}
