instance.id identifies an instance, not an instance,seed pair Update examples, templates and documentation.
Suggested by André de Souza Andrade.


git-svn-id: file:///home/manu/work/irace/svn/trunk@2060 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/vignettes/irace-package.Rnw
+++ b/vignettes/irace-package.Rnw
@@ -1063,7 +1063,7 @@ is invoked for each candidate configuration, passing as arguments:
 \renewcommand{\arraystretch}{1.2}
   \begin{tabularx}{1\linewidth}{@{}rX}
     \code{id.configuration}  & an alphanumeric string that uniquely identifies a configuration;\\
-    \code{id.instance} & an alphanumeric string that uniquely identifies a pair \code{(instance, seed)};\\
+    \code{id.instance} & an alphanumeric string that uniquely identifies an instance;\\
     \code{seed} & seed for the random number generator to be used for this evaluation, ignore the seed for deterministic algorithms;\\
     \code{instance} & string giving the instance to be used for this evaluation;\\
     \code{bound} & optional execution time bound. Only provided when adaptive capping is enabled, see \autoref{sec:capping};\\
@@ -1112,7 +1112,7 @@ list. The structure of the \code{experiment} list is as follows:
 \renewcommand{\arraystretch}{1.2}
   \begin{tabularx}{1\linewidth}{@{}rX}
  \code{id.configuration}  & an alphanumeric string that uniquely identifies a configuration;\\
-   \code{id.instance} & an alphanumeric string that uniquely identifies a pair \code{(instance, seed)};\\
+   \code{id.instance} & an alphanumeric string that uniquely identifies an instance;\\
    \code{seed} & seed to be used for this evaluation;\\
    \code{instance} & string giving the instance to be used for this evaluation;\\
    \code{bound} &  optional execution time bound;\\
@@ -1204,7 +1204,7 @@ is invoked for each candidate with the following arguments:
 \renewcommand{\arraystretch}{1.2}
   \begin{tabularx}{1\linewidth}{@{}rX}
  \code{id.configuration}  & an alphanumeric string that uniquely identifies a configuration;\\
-   \code{id.instance} & an alphanumeric string that uniquely identifies a pair \code{(instance, seed)};\\
+   \code{id.instance} & an alphanumeric string that uniquely identifies an instance;\\
    \code{seed} & seed to be used for this evaluation;\\
    \code{instance} & string giving the instance to be used for this evaluation;\\
    \code{num.configs} & number of alive candidate configurations;\\
