* R/readConfiguration.R: Improve error message when no training instances are given.
git-svn-id: file:///home/manu/work/irace/svn/trunk@2068 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -44,7 +44,11 @@
  * Fixed '--parallel' bug in Windows that resulted in
    "Error in checkForRemoteErrors(val)"
                                                           (Manuel López-Ibáñez)
-                                                          
+
+ * Improve error message when no training instances are given.
+                                                          (Manuel López-Ibáñez)
+
+
 2.4
 
  * The output of irace now specifies in which order, if any, configurations are
