* vignettes/irace-package.Rnw: Minor fix.
git-svn-id: file:///home/manu/work/irace/svn/trunk@2070 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/vignettes/irace-package.Rnw
+++ b/vignettes/irace-package.Rnw
@@ -1842,9 +1842,9 @@ statistical test:
 
 Other columns have the following meaning:
 \begin{description}
-  \item \code{instance}: Number of \code{(instance, seed)} pair executed. This number
+  \item \code{Instance}: Number of \code{(instance, seed)} pair executed. This number
 corresponds to the index of the list found in \code{state$.irace$instancesList}. See \autoref{sec:output r}
-for more information.
+for more information. This is different from the instance ID passed to \parameter{targetRunner}.
 \item \code{Bound}: Only when \parameter{capping} is enabled. Execution time used as bound
 for the execution of new candidate configurations. 
 \item \code{Alive}: Number of configurations that have not been
