--- a/vignettes/irace-package.Rnw
+++ b/vignettes/irace-package.Rnw
@@ -749,23 +749,18 @@ Command-line options override the same options specified in the \code{scenario.t
 
 \subsection{Setup example for ACOTSP}\label{sec:example}
 
-The \ACOTSP tuning example can be found in the package installation:
-\begin{center}
- \IRACEHOME{/examples/acotsp}
-\end{center}
+The \ACOTSP tuning example can be found in the package installation at 
+ \IRACEHOME{/examples/acotsp}.
+ %
 Additionally, a number of example scenarios can be found in the \code{examples} folder. More
-examples of tuning scenarios can be found in the Algorithm Configuration Library (AClib):
-\begin{center}
-\url{http://www.aclib.net/}
-\end{center}
+examples of tuning scenarios can be found in the Algorithm Configuration Library (AClib, \url{http://www.aclib.net/}).
 
 In this section, we describe how to execute the \ACOTSP scenario. If you wish to start setting up
 your own scenario, continue to the next section. For this example, we assume
 a GNU/Linux system but making the necessary changes in the commands and \parameter{targetRunner},
 it can be executed in any system that has a \proglang{C} compiler.
 %\MANUEL{I don't think this is true, since the target-runner script needs Bash}
-To execute this scenario follow the steps
-described in the following:
+To execute this scenario follow these steps:
 
 \begin{enumerate}
 \item Create a directory for the tuning (\eg~\path{~/tuning/}) and copy the example scenario files
@@ -825,9 +820,7 @@ $IRACE_HOME/bin/irace
 <<runexample2,prompt=FALSE,eval=FALSE>>=
 library("irace")
 setwd("~/tuning/")
-scenario <- readScenario(filename = "scenario.txt",
-                         scenario = defaultScenario())
-irace.main(scenario = scenario)
+irace.cmdline()
 @
 
 \end{enumerate}
@@ -1259,7 +1252,7 @@ by \irace for reporting errors in \code{targetEvaluator}:
 
 The \irace options \parameter{trainInstancesDir} and \parameter{trainInstancesFile}
 specify where to find the training instances.
-
+%
 By default, the value of \parameter{trainInstancesFile} is empty. This means that \irace will consider all files within the directory given by \parameter{trainInstancesDir} (by default \path{./Instances}) as training instances. 
 
 Otherwise, the value of \parameter{trainInstancesFile} may specify a text
@@ -1639,17 +1632,17 @@ configurations considered within each set. Some examples:
 
 The testing can be also (re-)executed at a later time by using the following
 \aR command:
-
+%
 <<testing_r, prompt=FALSE, eval=FALSE>>=
 testing.main(logFile = "./irace.Rdata")
 @
-
-This line will load the \irace results found in the
-generated \parameter{logFile} file to perform the testing.  The testing results
-will be saved in the \irace log file specified in
-\code{scenario\$logFile} in the \code{iraceResults\$testing} \aR object. The
-structure of the object is described in \autoref{sec:output r}.  For examples
-on how to analyse the data see \autoref{sec:analysis}.
+%
+The above line will load the scenario setup from \parameter{logFile} to
+perform the testing.  The testing results will be stored in the \aR object
+\code{iraceResults\$testing}, which is saved in the file specified by
+\code{scenario\$logFile}. The structure of the object is described in
+\autoref{sec:output r}.  For examples on how to analyse the results see
+\autoref{sec:analysis}.
 
 Another alternative is to test a specific set of configurations using the command-line option \parameter{-{}-only-test} as follows:
 \begin{lstlisting}[style=BashInputStyle]
@@ -2231,10 +2224,8 @@ using the hypervolume can be found in the examples at
 \subsection{Tuning for minimizing computation time}
 \label{sec:capping}
 
-\Irace was developed primarily for tuning algorithms that report solution
-cost. When using \irace for tuning algorithms that report computation time to
-reach a target, the execution time of a configuration must be returned instead
-of the cost by the \parameter{targetRunner}.
+When using \irace for tuning algorithms that report computation time to
+reach a target, \parameter{targetRunner} should return the execution time of a configuration instead of solution cost.
 
 %Even though \irace can be used for
 %minimizing computation time, \irace may itself require more time to do so in
@@ -2262,8 +2253,8 @@ The default value of \parameter{boundType} calculates the performance ($p_i^s$) 
 elite configuration ($s$) as the mean execution time of the  instances already executed 
 in the race and the currently executed instance ($i$). The \parameter{cappingType} option 
 specifies the measure used to obtain the elite configurations bound. By default, the execution bound 
-is calculated as the median of the execution times of the elite configurations.
-
+is calculated as the median of the execution times of the elite configurations:
+%
 \begin{equation}
   b_i= \text{Median}_{\theta_s \in \Celite} \{ p_i^s\} 
 \end{equation}
@@ -2271,7 +2262,7 @@ is calculated as the median of the execution times of the elite configurations.
 The execution bound for new configurations ($j$) is calculated by multiplying the elite configurations
 bound by the number of instances ($i$) in the execution list and subtracting the mean execution time 
 of the instances executed by the candidate:
-
+%
 \begin{equation}
     k_i^{'j} = b_{i} \cdot i + \bmin - p^{j}_{i-1} \cdot (i-1)
 \end{equation}
@@ -2279,9 +2270,9 @@ of the instances executed by the candidate:
 A small constant \bmin is added to account for time measurements errors. 
 These settings are also used to apply a dominance elimination criterion together with the
 statistical test elimination. The domination criterion is defined as:
-\begin{equation}
-\text{Median}_{\theta_s \in \Celite} \{p_i^{s}\}~+~\bmin~ <~ p_i^{j}
-\label{eq:dom}
+%
+\begin{equation}\label{eq:dom}
+b_i + \bmin  < p_i^{j}
 \end{equation}
 
 When elite configurations dominate new configurations, these are eliminated from the race.
@@ -2292,31 +2283,32 @@ This test is more appropriate to configure algorithms for optimizing runtime (se
 \end{xwarningbox} 
 
 The execution bound is constantly adjusted by \irace based on the best configurations 
-times nevertheless, a maximum execution time (\bmax) is never be exceeded. This maximum 
+times, nevertheless, a maximum execution time (\bmax) is never  exceeded. This maximum 
 execution time must be defined in the configuration scenario when \parameter{capping} 
 is enabled. To specify the maximum execution bound for the target runner executions 
 use the \parameter{boundMax} option. The final execution bound ($k_i^j$) is calculated by:
-
-\begin{equation}
+%
+\begin{equation}\label{eq:cap}
   k_i^j = \begin{cases}
     \bmax &\text{if $k_i^{'j} > \bmax$,} \\
     \min \{b_i, \bmax\}& \text{if $k_i^{'j} \leq 0$,}\\
     k_i^{'j}&\text{otherwise;}
   \end{cases}
-  \label{eq:cap}
 \end{equation}
 
 Additionally, the \parameter{boundDigits} option defines the precision of the time bound
 provided by \irace, the default setting is 0.  
 
-Timed out executions occur when the maximum execution bound is reached and the 
+Timed out executions occur when the maximum execution bound (\parameter{boundMax}) is reached and the 
 algorithm has not achieved successful termination or a defined quality goal.
 In this cases, is common practice to apply a penalty known as PARX, in which timeouts 
-are penalized by a constant $X$. Using the \parameter{boundPar} option is possible to define the 
+are penalized by multiplying  \parameter{boundMax} by a constant $X$. Using the \parameter{boundPar} option is possible to define the 
 constant $X$ to penalize timed out executions. Bounded executions are executions that do not 
 achieve successful termination or a defined quality goal in the execution time provided by \irace, 
 which is smaller than \parameter{boundMax}. The \parameter{boundAsTimeout} option replaces
-the evaluation of bounded executions by the \parameter{boundMax} value. 
+the evaluation of bounded executions by the \parameter{boundMax} value. More details about the implementation of adaptive capping can be found in \citet{PerLopHooStu2017:lion}.   
+
+
 \begin{xwarningbox}
 Note that bounded executions  are not timed out executions and thus, they will not be penalized by PARX. 
 \end{xwarningbox}
@@ -2329,7 +2321,6 @@ executions bounds. These must be provided by the target runner or target evaluat
 \autoref{sec:runner} and \autoref{sec:evaluator} . 
 \end{xwarningbox}
 
-More details about the implementation of adaptive capping can be found in \citet{PerLopHooStu2017:lion}.   
 
 
 \subsection{Hyper-pararameter optimization of machine learning methods}
@@ -2672,8 +2663,8 @@ lines in \IRACEHOME{/examples/hypervolume/target-evaluator}).
 Definitely. There are three main ways to achieve this:
 \begin{enumerate}
 \item Edit the \parameter{targetRunner} script to call \MATLAB in a non-interactive
-    way. See the \MATLAB documentation, or the following links.\footnote{\url{http://stackoverflow.com/questions/1518072/suppress-start-message-of-matlab}} \footnote{\url{http://stackoverflow.com/questions/4611195/how-to-call-matlab-from-command-line-and-print-to-stdout-before-exiting}} %
-    You would need to pass the parameter received by \parameter{targetRunner} to your \MATLAB script.\footnote{\url{https://www.mathworks.com/matlabcentral/answers/97204-how-can-i-pass-input-parameters-when-running-matlab-in-batch-mode-in-windows}} \footnote{\url{https://stackoverflow.com/questions/3335505/how-can-i-pass-command-line-arguments-to-a-standalone-matlab-executable-running}} 
+    way. See the \MATLAB documentation, or the following links.\footnote{\url{http://stackoverflow.com/questions/1518072/suppress-start-message-of-matlab}}\footnote{\url{http://stackoverflow.com/questions/4611195/how-to-call-matlab-from-command-line-and-print-to-stdout-before-exiting}} %
+    You would need to pass the parameter received by \parameter{targetRunner} to your \MATLAB script.\footnote{\url{https://www.mathworks.com/matlabcentral/answers/97204-how-can-i-pass-input-parameters-when-running-matlab-in-batch-mode-in-windows}}\footnote{\url{https://stackoverflow.com/questions/3335505/how-can-i-pass-command-line-arguments-to-a-standalone-matlab-executable-running}} 
     %
     There is a minimal example in \IRACEHOME{/examples/matlab/}.
   
