* Makefile: Use NOT_CRAN in make check.  * NEWS: update.  * examples/cpp/target-runner.cc: Update.  * tests/testthat/test-mlr.R: New test.  * tests/testthat.R: New.  * R/race.R: add fixme.
git-svn-id: file:///home/manu/work/irace/svn/trunk@2101 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+
+ * Allow instances to be a list of arbitrary R objects (mlr bugfix)
+                                                         (Manuel López-Ibáñez)
+ 
 3.0  (05/07/2018)
 
  * irace now supports adaptive capping for computation time minimization.
