* NEWS: Close version 3.1
git-svn-id: file:///home/manu/work/irace/svn/trunk@2113 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 3.1
 
- * Allow instances to be a list of arbitrary R objects (mlr bugfix)
+ * Use testthat for unit testing.                        (Manuel López-Ibáñez)
+
+ * Allow instances to be a list of arbitrary R objects (mlr bugfix).
                                                          (Manuel López-Ibáñez)
  
 3.0  (05/07/2018)
