* TODO: Mention pkgdown.
git-svn-id: file:///home/manu/work/irace/svn/trunk@2133 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/TODO
+++ b/TODO
@@ -4,6 +4,11 @@ BUGS: see BUGS file
 
 TODO R package:
 
+ * Use
+   https://github.com/seandavi/F1000R_BiocWorkflows/blob/master/rnwConversion/processesRnw.R
+   to convert the user-guide to Rmarkdown, then use pkgdown to generate a nice
+   website.
+
  * use devtools::release() to release
    http://r-pkgs.had.co.nz/release.html#release-submission
  
