--- a/NEWS
+++ b/NEWS
@@ -1,10 +1,15 @@
 
- * New function scenario.update.paths()                 (Manuel López-Ibáñez)
+ * Use `dynGet()` to find `targetRunner` and `targetEvaluator`.
+                                                         (Manuel López-Ibáñez)
  
- * Fix assert failure that may happen when elitistNewInstances is larger than
-   firstTest.                                           (Manuel López-Ibáñez)
+ * All tests now use `testthat`.                          (Manuel López-Ibáñez)
+ 
+ * New function `scenario.update.paths()`                (Manuel López-Ibáñez)
+ 
+ * Fix assert failure that may happen when `elitistNewInstances` is larger than
+   `firstTest`.                                           (Manuel López-Ibáñez)
    
- * fixed bug in checkTargetFiles() (--check) with capping.
+ * fixed bug in `checkTargetFiles()` (`--check`) with capping.
                                                         (Leslie Pérez Cáceres)
  
  
