* Makefile: Add support for pkgdown.
git-svn-id: file:///home/manu/work/irace/svn/trunk@2138 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/vignettes/irace-package.Rnw
+++ b/vignettes/irace-package.Rnw
@@ -2662,7 +2662,7 @@ irace. This is done, for example, when maximizing the hypervolume (see the last
 lines in \IRACEHOME{/examples/hypervolume/target-evaluator}).
 
 
-\subsection[Is it possible to configure a MATLAB algorithm with irace?]%
+\subsection[Is it possible to configure a MATLAB algorithm with irace?]
 {Is it possible to configure a \MATLAB algorithm with \irace ?}
 
 Definitely. There are three main ways to achieve this:
