* NEWS: Mention reporter.
git-svn-id: file:///home/manu/work/irace/svn/trunk@2139 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -7,7 +7,7 @@
  * New function `scenario.update.paths()`                (Manuel López-Ibáñez)
  
  * Fix assert failure that may happen when `elitistNewInstances` is larger than
-   `firstTest`.                                           (Manuel López-Ibáñez)
+   `firstTest`. Reported by Jose Riveaux.                (Manuel López-Ibáñez)
    
  * fixed bug in `checkTargetFiles()` (`--check`) with capping.
                                                         (Leslie Pérez Cáceres)
