* NEWS: checkTargetFiles()  ( --check) samples an instance unless sampleInstances is FALSE.
git-svn-id: file:///home/manu/work/irace/svn/trunk@2156 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+ * `checkTargetFiles()` (`--check`) samples an instance unless
+   `sampleInstances` is FALSE.                           (Manuel López-Ibáñez)
+   
  * Fix symbol printed in elimination test.               (Manuel López-Ibáñez)
 
  * Use `dynGet()` to find `targetRunner` and `targetEvaluator`.
