* New option aclib= (--aclib 1) enables compatibility with the    GenericWrapper4AC (https://github.com/automl/GenericWrapper4AC/) used by    AClib (http://aclib.net/). This is EXPERIMENTAL.
git-svn-id: file:///home/manu/work/irace/svn/trunk@2160 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+ * New option `aclib=` (`--aclib 1`) enables compatibility with the
+   GenericWrapper4AC (https://github.com/automl/GenericWrapper4AC/) used by
+   AClib (http://aclib.net/). This is EXPERIMENTAL.
+                                                         (Manuel López-Ibáñez)
+                                                         
+ * Fix printing of output when capping is enabled.
+                                                         (Manuel López-Ibáñez)
+ 
  * `checkTargetFiles()` (`--check`) samples an instance unless
    `sampleInstances` is FALSE.                           (Manuel López-Ibáñez)
    
